Fixed hidden inProgress link
I had messed up the styling in projects.css by adding display: block trying to fix the odd shape of the link when it pops up. I made it permenantly visible (not what I wanted). But I fixed that and the shape when visible

--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -1,6 +1,7 @@
 #wrapper {
 	background: white;
 	box-shadow: 0px -1px 10px rgba(60,60,60,.5);
+	/* padding: 10px; */
 }
 
 h1 {
@@ -168,11 +169,13 @@ p {
 }
 
 .bar {
-	display: block;
-	width: 100%;
+	box-sizing: border-box;
+	border-radius: 5px;
+	width: 95%;
+	margin: auto;
 	height: auto;
 	background-color: black;
 	color: white;
 	text-align: center;
-	padding: 1rem;
+	padding: 1rem 0rem 1rem 0rem;
 }
